[package]
name = "my_rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_rust_lib"
crate-type = ["cdylib"]


[dependencies]
#"experimental-async"
pyo3 =  { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
#arangors = { path = "/home/hovo/SOLIDITY/arangors", version = "0.6.0", features = ["surf_async"], default-features = false }
arangors = {version = "0.6.0", features = ["surf_async"], default-features = false }
serde_json = "1.0.128"
serde = { version = "1.0.209", features = ["derive"] }
serde_qs = "0.13.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
